--- a/index-europe1.html
+++ b/index-europe1.html
@@ -1,295 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Europe Map Quiz</title>
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Poppins', sans-serif;
-      background-color: #0a0a0a;
-      color: #fff;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Europe Map Quiz</title>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
+    <style>
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            background-color: #0a0a0a; /* רקע מאחורי המפה */
+            color: #fff;
+        }
 
-    #restart-button {
-      margin: 10px auto;
-      padding: 10px 20px;
-      font-size: 1em;
-      cursor: pointer;
-      background-color: #0077cc;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      transition: background-color 0.3s ease;
-    }
+        #restart-button {
+            margin: 10px auto;
+            padding: 10px 18px;
+            font-size: 1em;
+            cursor: pointer;
+            background-color: #0077cc;
+            color: white;
+            border: none;
+            border-radius: 5px;
+        }
 
-    #restart-button:hover {
-      background-color: #005fa3;
-    }
+        #restart-button:hover {
+            background-color: #005fa3;
+        }
 
-    #map-container {
-      width: 100%;
-      max-width: 1000px;
-      background-color: #eeeeee;
-      overflow: hidden;
-      position: relative;
-    }
+        #map-container {
+            width: 100%;
+            max-width: 1000px;
+            background-color: #eeeeee; /* רקע של המפה */
+            overflow: hidden;
+        }
 
-    svg {
-      width: 100%;
-      height: auto;
-      touch-action: none;
-    }
+        svg {
+            width: 100%;
+            height: auto;
+        }
 
-    #zoom-buttons {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
+        path {
+            fill: #f0f0f0;         /* צבע פנימי של כל מדינה */
+            stroke: #333;         /* צבע קו הגבול */
+            stroke-width: 0.5px;   /* עובי קו הגבול */
+            transition: all 0.3s ease;
+        }
 
-    .zoom-btn {
-      background-color: #0077cc;
-      border: none;
-      color: white;
-      padding: 8px 12px;
-      font-size: 1.2em;
-      cursor: pointer;
-      border-radius: 5px;
-      transition: transform 0.2s ease, background-color 0.3s ease;
-    }
+        path:hover {
+            fill: steelblue;
+            cursor: pointer;
+        }
 
-    .zoom-btn:hover {
-      transform: scale(1.1);
-      background-color: #005fa3;
-    }
+        .guessed {
+            fill: lightgreen !important; /* צבע ירוק בהיר למדינה שנמצאה */
+            stroke: green !important;
+            stroke-width: 2px !important;
+            pointer-events: none !important; /* מניעת אינטראקציה חוזרת */
+        }
 
-    path {
-      fill: #f0f0f0;
-      stroke: #333;
-      stroke-width: 0.5px;
-      transition: all 0.3s ease;
-    }
+        .guessed::after {
+            content: '✔'; /* סימן וי למדינה שנמצאה - אפשר להחליף ל-X אם רוצים */
+            font-size: 1em;
+            position: absolute;
+            transform: translate(-50%, -50%);
+            /* צריך למקם את הסימן במרכז המדינה בצורה יותר מדויקת באמצעות JavaScript אם רוצים */
+        }
 
-    path:hover {
-      fill: steelblue;
-      cursor: pointer;
-    }
+        #country-list {
+            list-style: none;
+            padding: 0;
+            margin: 20px auto 10px;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 8px;
+            width: 95%;
+            max-width: 1000px;
+            max-height: 180px;
+            overflow-y: auto;
+        }
 
-    .guessed {
-      stroke: #0077cc !important;
-      stroke-width: 3px !important;
-      fill-opacity: 1 !important;
-    }
+        #country-list li {
+            background-color: #000;
+            border: 1px solid #aaa;
+            padding: 8px 12px;
+            cursor: pointer;
+            border-radius: 5px;
+            font-size: 0.95em;
+            user-select: none;
+            color: #fff;
+        }
 
-    #country-list {
-      list-style: none;
-      padding: 0;
-      margin: 20px auto 10px;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 8px;
-      width: 95%;
-      max-width: 1000px;
-      max-height: 180px;
-      overflow-y: auto;
-    }
+        #country-list li.selected {
+            background-color: #0077cc;
+            color: #fff;
+        }
 
-    #country-list li {
-      background-color: #000;
-      border: 1px solid #aaa;
-      padding: 8px 12px;
-      border-radius: 5px;
-      font-size: 0.95em;
-      user-select: none;
-      color: #fff;
-      cursor: pointer;
-      transition: background-color 0.3s ease, text-decoration 0.3s ease;
-    }
+        .matched {
+            background-color: lightgreen;
+            border-color: green;
+            color: gray;
+            cursor: not-allowed;
+        }
 
-    #country-list li.selected {
-      background-color: #0077cc;
-      color: #fff;
-    }
+        .error {
+            color: red;
+            margin-top: 10px;
+        }
 
-    #country-list li.matched {
-      background-color: lightgreen;
-      color: gray;
-      text-decoration: line-through;
-      cursor: not-allowed;
-    }
+        #scoreboard {
+            margin-top: 10px;
+            font-size: 1em;
+        }
 
-    .error {
-      color: red;
-      margin-top: 10px;
-    }
+        #victory-message {
+            display: none;
+            font-size: 1.2em;
+            color: lightgreen;
+            margin-top: 10px;
+        }
 
-    #scoreboard {
-      margin-top: 10px;
-      font-size: 1em;
-    }
-
-    #victory-message {
-      display: none;
-      font-size: 1.2em;
-      color: lightgreen;
-      margin-top: 10px;
-    }
-
-    @media (max-width: 600px) {
-      #country-list {
-        font-size: 0.8em;
-        max-height: 120px;
-      }
-    }
-  </style>
+        @media (max-width: 600px) {
+            #country-list {
+                font-size: 0.8em;
+                max-height: 120px;
+            }
+        }
+    </style>
 </head>
 <body>
+    <button id="restart-button">Restart Game</button>
 
-  <button id="restart-button" onclick="location.reload()">Restart Game</button>
-
-  <div id="map-container">
-    <div id="zoom-buttons">
-      <button class="zoom-btn" id="zoom-in">+</button>
-      <button class="zoom-btn" id="zoom-out">-</button>
+    <div id="map-container">
+        <svg viewBox="0 0 1000 660" preserveAspectRatio="xMidYMid meet"></svg>
     </div>
-    <svg viewBox="0 0 1000 600" preserveAspectRatio="xMidYMid meet"></svg>
-  </div>
 
-  <ul id="country-list"></ul>
+    <ul id="country-list"></ul>
+    <div id="feedback"></div>
+    <div id="scoreboard">
+        <strong>Score:</strong> <span id="score">0</span> |
+        <strong>Attempts:</strong> <span id="attempts">0</span>
+    </div>
+    <div id="victory-message"></div>
 
-  <div id="feedback"></div>
+    <script>
+        const nameMap = {
+            "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
+            "CY": "Cyprus", "CZ": "Czech Republic", "DK": "Denmark", "EE": "Estonia", "FI": "Finland",
+            "FR": "France", "DE": "Germany", "GR": "Greece", "HU": "Hungary", "IS": "Iceland",
+            "IE": "Ireland", "IT": "Italy", "LV": "Latvia", "LT": "Lithuania", "LU": "Luxembourg",
+            "MT": "Malta", "NL": "Netherlands", "NO": "Norway", "PL": "Poland", "PT": "Portugal",
+            "RO": "Romania", "SK": "Slovakia", "SI": "Slovenia", "ES": "Spain", "SE": "Sweden",
+            "CH": "Switzerland", "GB": "United Kingdom", "UA": "Ukraine", "RS": "Serbia", "BA": "Bosnia and Herzegovina",
+            "MD": "Moldova", "MK": "North Macedonia", "BY": "Belarus", "RU": "Russia", "TR": "Turkey",
+            "AZ": "Azerbaijan", "AM": "Armenia", "IL": "Israel", "LI": "Liechtenstein", "FO": "Faroe Islands",
+            "AD": "Andorra", "MC": "Monaco", "ME": "Montenegro", "SM": "San Marino", "VA": "Vatican City"
+        };
 
-  <div id="scoreboard">
-    <strong>Score:</strong> <span id="score">0</span> |
-    <strong>Attempts:</strong> <span id="attempts">0</span>
-  </div>
+        const svg = d3.select("svg");
+        const width = 960;
+        const height = 600;
 
-  <div id="victory-message"></div>
+        const projection = d3.geoMercator()
+            .center([20, 55])
+            .scale(600)
+            .translate([width / 2, height / 2]);
 
-  <script>
-    const nameMap = {
-      "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
-      "CY": "Cyprus", "CZ": "Czech Republic", "DK": "Denmark", "EE": "Estonia", "FI": "Finland",
-      "FR": "France", "DE": "Germany", "GR": "Greece", "HU": "Hungary", "IS": "Iceland",
-      "IE": "Ireland", "IT": "Italy", "LV": "Latvia", "LT": "Lithuania", "LU": "Luxembourg",
-      "MT": "Malta", "NL": "Netherlands", "NO": "Norway", "PL": "Poland", "PT": "Portugal",
-      "RO": "Romania", "SK": "Slovakia", "SI": "Slovenia", "ES": "Spain", "SE": "Sweden",
-      "CH": "Switzerland", "GB": "United Kingdom", "UA": "Ukraine", "RS": "Serbia", "BA": "Bosnia and Herzegovina",
-      "MD": "Moldova", "MK": "North Macedonia", "BY": "Belarus", "RU": "Russia", "TR": "Turkey",
-      "AZ": "Azerbaijan", "AM": "Armenia", "IL": "Israel", "LI": "Liechtenstein", "FO": "Faroe Islands",
-      "AD": "Andorra", "MC": "Monaco", "ME": "Montenegro", "SM": "San Marino", "VA": "Vatican City"
-    };
+        const path = d3.geoPath().projection(projection);
 
-    const svg = d3.select("svg");
-    const g = svg.append("g"); // גרופ למפה
-    const width = 1000;
-    const height = 600;
+        let selectedCountry = null;
+        let score = 0;
+        let attempts = 0;
+        let correctGuesses = 0;
 
-    const projection = d3.geoMercator()
-      .center([20, 55])
-      .scale(600)
-      .translate([width / 2, height / 2]);
+        // הגדרת זום
+        const zoom = d3.zoom()
+            .scaleExtent([1, 8]) // מגבלות זום
+            .on("zoom", function() {
+                svg.selectAll("path").attr("transform", d3.event.transform);
+            });
 
-    const path = d3.geoPath().projection(projection);
+        svg.call(zoom);
 
-    let selectedCountry = null;
-    let score = 0;
-    let attempts = 0;
-    let correctGuesses = 0;
+        d3.json('data/europe.topojson').then(data => {
+            const countries = topojson.feature(data, data.objects.europe).features;
 
-    const zoom = d3.zoom()
-      .scaleExtent([1, 8])
-      .on('zoom', (event) => {
-        g.attr('transform', event.transform);
-      });
+            const countryPaths = svg.selectAll('path')
+                .data(countries)
+                .enter().append('path')
+                .attr('d', path)
+                .attr('id', d => 'country-' + d.id);
 
-    svg.call(zoom);
+            const countryList = d3.select('#country-list');
+            const countryNames = countries.map(d => ({
+                id: d.id,
+                name: nameMap[d.id] || d.id,
+                centroid: path.centroid(d)
+            }));
 
-    d3.select("#zoom-in").on("click", () => {
-      svg.transition().duration(300).call(zoom.scaleBy, 1.2);
-    });
+            const countryItems = countryList.selectAll('li')
+                .data(countryNames)
+                .enter().append('li')
+                .attr('id', d => 'country-' + d.id)
+                .text(d => d.name)
+                .on('click', function(d) {
+                    if (!d3.select(this).classed('matched')) {
+                        countryList.selectAll('li').classed('selected', false);
+                        d3.select(this).classed('selected', true);
+                        selectedCountry = d;
+                        d3.select('#feedback').text('');
+                    }
+                });
 
-    d3.select("#zoom-out").on("click", () => {
-      svg.transition().duration(300).call(zoom.scaleBy, 0.8);
-    });
+            countryPaths.on('click', function(d) {
+                const feedbackElement = d3.select('#feedback');
+                if (selectedCountry) {
+                    attempts++;
+                    d3.select('#attempts').text(attempts);
+                    if (nameMap[d.id] === selectedCountry.name) {
+                        score += 10;
+                        correctGuesses++;
+                        d3.select('#score').text(score);
+                        feedbackElement.text('Correct!').classed('error', false);
+                        d3.select(this).classed('guessed', true);
+                        const matchedItem = d3.select('#country-' + selectedCountry.id);
+                        matchedItem.classed('matched', true).classed('selected', false).on('click', null);
+                        selectedCountry = null;
 
-    d3.json('data/europe.topojson').then(data => {
-      const countries = topojson.feature(data, data.objects.europe).features;
+                        if (correctGuesses === countryNames.length) {
+                            d3.select('#victory-message')
+                                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
+                                .style('display', 'block');
+                        }
+                    } else {
+                        feedbackElement.text('Incorrect! Try again.').classed('error', true);
+                    }
+                } else {
+                    feedbackElement.text('Please select a country name first.').classed('error', true);
+                }
+            });
 
-      const countryPaths = g.selectAll('path')
-        .data(countries)
-        .enter().append('path')
-        .attr('d', path)
-        .attr('id', d => 'country-' + d.id);
-
-      const countryList = d3.select('#country-list');
-      const countryNames = countries.map(d => ({
-        id: d.id,
-        name: nameMap[d.id] || d.id,
-      }));
-
-      const countryItems = countryList.selectAll('li')
-        .data(countryNames)
-        .enter().append('li')
-        .attr('id', d => 'country-' + d.id)
-        .text(d => d.name)
-        .on('click', function(d) {
-          if (!d3.select(this).classed('matched')) {
-            countryList.selectAll('li').classed('selected', false);
-            d3.select(this).classed('selected', true);
-            selectedCountry = d;
-            d3.select('#feedback').text('');
-          }
+            d3.select('#restart-button').on('click', () => location.reload());
         });
-
-      countryPaths.on('click', function(d) {
-        const feedbackElement = d3.select('#feedback');
-        if (selectedCountry) {
-          attempts++;
-          d3.select('#attempts').text(attempts);
-          if (nameMap[d.id] === selectedCountry.name) {
-            score += 10;
-            correctGuesses++;
-            d3.select('#score').text(score);
-            feedbackElement.text('Correct!').classed('error', false);
-
-            d3.select(this)
-              .classed('guessed', true)
-              .style('pointer-events', 'none');
-
-            const matchedItem = d3.select('#country-' + selectedCountry.id);
-            matchedItem
-              .classed('matched', true)
-              .classed('selected', false)
-              .on('click', null);
-
-            selectedCountry = null;
-
-            if (correctGuesses === countryNames.length) {
-              d3.select('#victory-message')
-                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
-                .style('display', 'block');
-            }
-          } else {
-            feedbackElement.text('Incorrect! Try again.').classed('error', true);
-          }
-        } else {
-          feedbackElement.text('Please select a country name first.').classed('error', true);
-        }
-      });
-    });
-  </script>
-
+    </script>
 </body>
 </html>
