--- a/index-europe1.html
+++ b/index-europe1.html
@@ -186,7 +186,11 @@
                 svg.selectAll("path").attr("transform", d3.event.transform);
             });
 
-        svg.call(zoom);
+        svg.call(d3.drag()
+            .on("start", function() {
+                d3.event.sourceEvent.stopPropagation(); // מניעת אירועי גרירה להפריע לזום
+            })
+        ).call(zoom);
 
         d3.json('data/europe.topojson').then(data => {
             const countries = topojson.feature(data, data.objects.europe).features;
