--- a/index.html
+++ b/index.html
@@ -101,12 +101,11 @@
       <div class="flag">🇺🇸</div>
       <h2>USA Map</h2>
     </div>
-  </div>
-  <div class="card" onclick="location.href='index-europe1.html'">
-    <div class="flag">🇪🇺</div>
-    <h2>Europe Map1</h2>
-  </div>
-
+    <div class="card-container">
+      <div class="card" onclick="location.href='index-europe1.html'">
+        <div class="flag">🇪🇺</div>
+        <h2>Europe Map New</h2>
+      </div>
   <footer>© 2025 World Map Quiz Project</footer>
 
 </body>
