--- a/index-usa1.html
+++ b/index-usa1.html
@@ -14,7 +14,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #0a0a0a;
+            background-color: #7c8c97;
             color: #fff;
             min-height: 100vh;
         }
@@ -85,7 +85,7 @@
         }
 
         #state-list li {
-            background-color: #000;
+           /* background-color: #000; */
             border: 1px solid #aaa;
             padding: 8px 12px;
             cursor: pointer;
