--- a/index-usa1.html
+++ b/index-usa1.html
@@ -1,268 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>USA Map Quiz</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #7c8c97;
-            color: #fff;
-            min-height: 100vh;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>USA Map Quiz</title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #7c8c97;
+      color: #fff;
+      min-height: 100vh;
+    }
 
-        #restart-button {
-            margin: 10px auto;
-            padding: 10px 18px;
-            font-size: 1em;
-            cursor: pointer;
-            background-color: #0077cc;
-            color: white;
-            border: none;
-            border-radius: 5px;
-        }
+    #controls {
+      margin: 10px auto;
+      display: flex;
+      gap: 10px;
+    }
 
-        #restart-button:hover {
-            background-color: #005fa3;
-        }
+    button {
+      padding: 10px 18px;
+      font-size: 1em;
+      cursor: pointer;
+      background-color: #0077cc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
 
-        #map-container {
-            width: 95%;
-            max-width: 1000px;
-            background-color: #eeeeee;
-            overflow: hidden;
-            flex-grow: 1;
-            margin-bottom: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+    button:hover {
+      background-color: #005fa3;
+    }
 
-        svg {
-            width: 100%;
-            height: auto;
-            max-height: 95%;
-        }
+    #map-container {
+      width: 95%;
+      max-width: 1000px;
+      background-color: #eeeeee;
+      overflow: hidden;
+      flex-grow: 1;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-        path {
-            fill: #f0f0f0;
-            stroke: #333;
-            stroke-width: 0.5px;
-            transition: all 0.3s ease;
-        }
+    svg {
+      width: 100%;
+      height: auto;
+      max-height: 95%;
+    }
 
-        path:hover {
-            fill: steelblue;
-            cursor: pointer;
-        }
+    path {
+      fill: #f0f0f0;
+      stroke: #333;
+      stroke-width: 0.5px;
+      transition: all 0.3s ease;
+    }
 
-        .guessed {
-            fill: orange !important;
-            stroke: darkorange !important;
-            stroke-width: 2px !important;
-            pointer-events: none !important;
-        }
+    path:hover {
+      fill: steelblue;
+      cursor: pointer;
+    }
 
-        #state-list {
-            list-style: none;
-            padding: 0;
-            margin: 10px auto 20px;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 8px;
-            width: 95%;
-            max-width: 1000px;
-            overflow-y: auto;
-        }
+    .guessed {
+      fill: orange !important;
+      stroke: darkorange !important;
+      stroke-width: 2px !important;
+      pointer-events: none !important;
+    }
 
-        #state-list li {
-           /* background-color: #000; */
-            border: 1px solid #aaa;
-            padding: 8px 12px;
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 0.95em;
-            user-select: none;
-            color: #fff;
-        }
+    .skipped {
+      fill: #aaa !important;
+      stroke: #555 !important;
+      pointer-events: none !important;
+      opacity: 0.6;
+    }
 
-        #state-list li.selected {
-            background-color: #0077cc;
-            color: #fff;
-        }
+    .error {
+      color: red;
+      margin-top: 10px;
+    }
 
-        .matched {
-            background-color: lightgray !important;
-            color: red !important;
-            cursor: not-allowed !important;
-            opacity: 0.6 !important;
-            padding-right: 20px !important;
-            position: relative !important;
-        }
+    #question {
+      font-size: 1.3em;
+      margin: 12px 0;
+    }
 
-        .matched::after {
-            content: '✖';
-            font-size: 1em;
-            position: absolute;
-            right: 5px;
-            top: 50%;
-            transform: translateY(-50%);
-        }
+    #scoreboard {
+      margin-top: 10px;
+      font-size: 1em;
+    }
 
-        .error {
-            color: red;
-            margin-top: 10px;
-        }
-
-        #scoreboard {
-            margin-top: 10px;
-            font-size: 1em;
-        }
-
-        #victory-message {
-            display: none;
-            font-size: 1.2em;
-            color: lightgreen;
-            margin-top: 10px;
-        }
-
-        @media (max-width: 600px) {
-            #state-list {
-                font-size: 1em;
-                flex-direction: column;
-                align-items: center;
-            }
-
-            #state-list li {
-                margin-bottom: 5px;
-                width: 80%;
-                text-align: center;
-            }
-
-            #map-container {
-                margin-top: 20px;
-            }
-        }
-    </style>
+    #victory-message {
+      display: none;
+      font-size: 1.2em;
+      color: lightgreen;
+      margin-top: 10px;
+    }
+  </style>
 </head>
 <body>
+  <div id="controls">
     <button id="restart-button">Restart Game</button>
+    <button id="skip-button">Skip</button>
+  </div>
 
-    <div id="map-container">
-        <svg viewBox="0 0 1000 600" preserveAspectRatio="xMidYMid meet"></svg>
-    </div>
+  <div id="question"></div>
 
-    <ul id="state-list"></ul>
+  <div id="map-container">
+    <svg viewBox="0 0 1000 600" preserveAspectRatio="xMidYMid meet"></svg>
+  </div>
 
-    <div id="feedback"></div>
+  <div id="feedback"></div>
 
-    <div id="scoreboard">
-        <strong>Score:</strong> <span id="score">0</span> |
-        <strong>Attempts:</strong> <span id="attempts">0</span>
-    </div>
+  <div id="scoreboard">
+    <strong>Score:</strong> <span id="score">0</span> |
+    <strong>Attempts:</strong> <span id="attempts">0</span>
+  </div>
 
-    <div id="victory-message"></div>
+  <div id="victory-message"></div>
 
-    <script>
-        const nameMap = {
-            "01": "Alabama", "02": "Alaska", "04": "Arizona", "05": "Arkansas", "06": "California",
-            "08": "Colorado", "09": "Connecticut", "10": "Delaware", "11": "District of Columbia",
-            "12": "Florida", "13": "Georgia", "15": "Hawaii", "16": "Idaho", "17": "Illinois",
-            "18": "Indiana", "19": "Iowa", "20": "Kansas", "21": "Kentucky", "22": "Louisiana",
-            "23": "Maine", "24": "Maryland", "25": "Massachusetts", "26": "Michigan", "27": "Minnesota",
-            "28": "Mississippi", "29": "Missouri", "30": "Montana", "31": "Nebraska", "32": "Nevada",
-            "33": "New Hampshire", "34": "New Jersey", "35": "New Mexico", "36": "New York",
-            "37": "North Carolina", "38": "North Dakota", "39": "Ohio", "40": "Oklahoma", "41": "Oregon",
-            "42": "Pennsylvania", "44": "Rhode Island", "45": "South Carolina", "46": "South Dakota",
-            "47": "Tennessee", "48": "Texas", "49": "Utah", "50": "Vermont", "51": "Virginia",
-            "53": "Washington", "54": "West Virginia", "55": "Wisconsin", "56": "Wyoming"
-        };
+  <script>
+    const nameMap = {
+      "01": "Alabama", "02": "Alaska", "04": "Arizona", "05": "Arkansas", "06": "California",
+      "08": "Colorado", "09": "Connecticut", "10": "Delaware", // "11": "District of Columbia", ← הוסרה
+      "12": "Florida", "13": "Georgia", "15": "Hawaii", "16": "Idaho", "17": "Illinois",
+      "18": "Indiana", "19": "Iowa", "20": "Kansas", "21": "Kentucky", "22": "Louisiana",
+      "23": "Maine", "24": "Maryland", "25": "Massachusetts", "26": "Michigan", "27": "Minnesota",
+      "28": "Mississippi", "29": "Missouri", "30": "Montana", "31": "Nebraska", "32": "Nevada",
+      "33": "New Hampshire", "34": "New Jersey", "35": "New Mexico", "36": "New York",
+      "37": "North Carolina", "38": "North Dakota", "39": "Ohio", "40": "Oklahoma", "41": "Oregon",
+      "42": "Pennsylvania", "44": "Rhode Island", "45": "South Carolina", "46": "South Dakota",
+      "47": "Tennessee", "48": "Texas", "49": "Utah", "50": "Vermont", "51": "Virginia",
+      "53": "Washington", "54": "West Virginia", "55": "Wisconsin", "56": "Wyoming"
+    };
 
-        const svg = d3.select("svg");
-        const width = 1000;
-        const height = 600;
+    const svg = d3.select("svg");
+    const width = 1000;
+    const height = 600;
+    const projection = d3.geoAlbersUsa().scale(1000).translate([width / 2, height / 2]);
+    const path = d3.geoPath().projection(projection);
 
-        const projection = d3.geoAlbersUsa()
-            .scale(1000)
-            .translate([width / 2, height / 2]);
+    let remainingStates = [];
+    let currentTarget = null;
+    let score = 0;
+    let attempts = 0;
 
-        const path = d3.geoPath().projection(projection);
+    function pickNextState() {
+      if (remainingStates.length === 0) {
+        d3.select("#victory-message")
+          .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
+          .style("display", "block");
+        d3.select("#question").text('');
+        return;
+      }
+      currentTarget = remainingStates.pop();
+      d3.select("#question").text(`Where is: ${currentTarget.name}?`);
+    }
 
-        let selectedState = null;
-        let score = 0;
-        let attempts = 0;
-        let correctGuesses = 0;
+    d3.json('https://cdn.jsdelivr.net/npm/us-atlas@3/states-10m.json').then(data => {
+      const states = topojson.feature(data, data.objects.states).features;
+      const validStates = states
+        .map(d => ({ id: d.id, name: nameMap[d.id] }))
+        .filter(d => d.name);
 
-        d3.json('https://cdn.jsdelivr.net/npm/us-atlas@3/states-10m.json').then(data => {
-            const states = topojson.feature(data, data.objects.states).features;
+      remainingStates = d3.shuffle(validStates.slice());
+      pickNextState();
 
-            const statePaths = svg.selectAll('path')
-                .data(states)
-                .enter().append('path')
-                .attr('d', path)
-                .attr('id', d => 'state-' + d.id);
+      const statePaths = svg.selectAll('path')
+        .data(states)
+        .enter().append('path')
+        .attr('d', path)
+        .attr('id', d => 'state-' + d.id);
 
-            const stateList = d3.select('#state-list');
-            const stateNames = states.map(d => ({
-                id: d.id,
-                name: nameMap[d.id] || d.id
-            }));
+      statePaths.on('click', function(d) {
+        const feedback = d3.select('#feedback');
+        if (!currentTarget) return;
 
-            const stateItems = stateList.selectAll('li')
-                .data(stateNames)
-                .enter().append('li')
-                .attr('id', d => 'state-' + d.id)
-                .text(d => d.name)
-                .on('click', function(d) {
-                    if (!d3.select(this).classed('matched')) {
-                        stateList.selectAll('li').classed('selected', false);
-                        d3.select(this).classed('selected', true);
-                        selectedState = d;
-                        d3.select('#feedback').text('');
-                    }
-                });
+        attempts++;
+        d3.select('#attempts').text(attempts);
 
-            statePaths.on('click', function(d) {
-                const feedbackElement = d3.select('#feedback');
-                if (selectedState) {
-                    attempts++;
-                    d3.select('#attempts').text(attempts);
-                    if (d.id === selectedState.id) {
-                        score += 10;
-                        correctGuesses++;
-                        d3.select('#score').text(score);
-                        feedbackElement.text('Correct!').classed('error', false);
-                        d3.select(this).classed('guessed', true);
+        if (d.id === currentTarget.id) {
+          score += 10;
+          d3.select('#score').text(score);
+          feedback.text('Correct!').classed('error', false);
+          d3.select(this).classed('guessed', true);
+          currentTarget = null;
+          setTimeout(pickNextState, 700);
+        } else {
+          feedback.text('Incorrect! Try again.').classed('error', true);
+        }
+      });
 
-                        const matchedItem = d3.select('#state-' + selectedState.id);
-                        matchedItem.classed('matched', true).classed('selected', false).on('click', null);
+      d3.select('#skip-button').on('click', () => {
+  if (!currentTarget) return;
+  d3.select('#feedback').text(`Skipped: ${currentTarget.name}`).classed('error', false);
+  // אין סימון ויזואלי לדילוג
+  const insertIndex = Math.floor(Math.random() * remainingStates.length);
+  remainingStates.splice(insertIndex, 0, currentTarget);
+  currentTarget = null;
+  setTimeout(pickNextState, 700);
+});
 
-                        selectedState = null;
-
-                        if (correctGuesses === stateNames.length) {
-                            d3.select('#victory-message')
-                                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
-                                .style('display', 'block');
-                        }
-                    } else {
-                        feedbackElement.text('Incorrect! Try again.').classed('error', true);
-                    }
-                } else {
-                    feedbackElement.text('Please select a state name first.').classed('error', true);
-                }
-            });
-
-            d3.select('#restart-button').on('click', () => location.reload());
-        });
-    </script>
+      d3.select('#restart-button').on('click', () => location.reload());
+    });
+  </script>
 </body>
 </html>
