--- a/index-usa1.html
+++ b/index-usa1.html
@@ -99,22 +99,43 @@
     }
 
     @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
+
       #map-container {
-        height: 70vh;
+        height: 80vh;
+        width: 100%;
       }
 
       svg {
-        max-height: 100%;
+        height: 100%;
+        width: 100%;
+        max-height: unset;
       }
 
       #question {
-        font-size: 1.1em;
+        font-size: 1.3em;
         text-align: center;
       }
 
+      #controls {
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+      }
+
       button {
-        font-size: 0.95em;
-        padding: 8px 14px;
+        font-size: 1em;
+        padding: 10px 16px;
+        width: 80%;
+        max-width: 300px;
+      }
+
+      #scoreboard,
+      #feedback {
+        font-size: 1em;
+        text-align: center;
       }
     }
   </style>
