--- a/index-usa1.html
+++ b/index-usa1.html
@@ -14,8 +14,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #7c8c97;
-      color: #fff;
+      background-color: #b1a4a4;
+      color: #e79393;
       min-height: 100vh;
     }
 
@@ -82,9 +82,15 @@
     }
 
     #question {
-      font-size: 1.3em;
-      margin: 12px 0;
+     font-size: 1.8em;
+     color: #26226b;
+     font-weight: bold;
+     margin: 16px 0;
+     text-align: center;
+     padding: 8px 16px;
+     border-radius: 8px;
     }
+
 
     #scoreboard {
       margin-top: 10px;
