--- a/index-europe1.html
+++ b/index-europe1.html
@@ -1,266 +1,259 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Europe Map Quiz</title>
-    <script src="https://d3js.org/d3.v5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            background-color: #0a0a0a; /* רקע מאחורי המפה */
-            color: #fff;
-            min-height: 100vh; /* מבטיח שהגוף יתפוס לפחות את גובה המסך */
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Europe Map Quiz</title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/topojson-client@3"></script>
+  <style>
+    body {
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color: #0a0a0a;
+      color: #fff;
+      min-height: 100vh;
+    }
 
-        #restart-button {
-            margin: 10px auto;
-            padding: 10px 18px;
-            font-size: 1em;
-            cursor: pointer;
-            background-color: #0077cc;
-            color: white;
-            border: none;
-            border-radius: 5px;
-        }
+    #controls {
+      margin: 10px auto;
+      display: flex;
+      gap: 10px;
+    }
 
-        #restart-button:hover {
-            background-color: #005fa3;
-        }
+    button {
+      padding: 10px 18px;
+      font-size: 1em;
+      cursor: pointer;
+      background-color: #0077cc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
 
-        #map-container {
-            width: 95%; /* קצת פחות מ-100% כדי להשאיר שוליים קטנים */
-            max-width: 1000px;
-            background-color: #eeeeee; /* רקע של המפה */
-            overflow: hidden;
-            flex-grow: 1; /* מאפשר למכולה לגדול ולתפוס מקום פנוי */
-            margin-bottom: 10px; /* מרווח קטן בין המפה לרשימה */
-            display: flex;
-            align-items: center; /* מרכוז אנכי של ה-SVG בתוך המכולה (אופציונלי) */
-            justify-content: center; /* מרכוז אופקי של ה-SVG בתוך המכולה (אופציונלי) */
-        }
+    button:hover {
+      background-color: #005fa3;
+    }
 
-        svg {
-            width: 100%;
-            height: auto; /* שמירה על יחס גובה-רוחב */
-            max-height: 95%; /* הגבלה על הגובה המקסימלי בתוך המכולה */
-        }
+    #map-container {
+      width: 95%;
+      max-width: 1000px;
+      background-color: #eeeeee;
+      overflow: hidden;
+      flex-grow: 1;
+      margin-bottom: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
 
-        path {
-            fill: #f0f0f0;         /* צבע פנימי של כל מדינה */
-            stroke: #333;         /* צבע קו הגבול */
-            stroke-width: 0.5px;   /* עובי קו הגבול */
-            transition: all 0.3s ease;
-        }
+    svg {
+      width: 100%;
+      height: auto;
+      max-height: 95vh;
+    }
 
-        path:hover {
-            fill: steelblue;
-            cursor: pointer;
-        }
+    path {
+      fill: #f0f0f0;
+      stroke: #333;
+      stroke-width: 0.5px;
+      transition: all 0.3s ease;
+    }
 
-        .guessed {
-         fill: lightgreen !important;
-          stroke: green !important;
-          stroke-width: 2px !important;
-         pointer-events: none !important;
-         opacity: 0.7 !important; /* הוספת !important כדי להגביר את הספציפיות */
-        }
+    path:hover {
+      fill: steelblue;
+      cursor: pointer;
+    }
 
-        .guessed::after {
-            content: '✔'; /* סימן וי למדינה שנמצאה - אפשר להחליף ל-X אם רוצים */
-            font-size: 1em;
-            position: absolute;
-            transform: translate(-50%, -50%);
-            /* צריך למקם את הסימן במרכז המדינה בצורה יותר מדויקת באמצעות JavaScript אם רוצים */
-        }
+    .guessed {
+      fill: orange !important;
+      stroke: darkorange !important;
+      stroke-width: 2px !important;
+      pointer-events: none !important;
+    }
 
-        #country-list {
-            list-style: none;
-            padding: 0;
-            margin: 10px auto 20px; /* מרווח שונה מלמעלה ומלמטה */
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 8px;
-            width: 95%;
-            max-width: 1000px;
-            /* max-height: none; הסרת הגובה המקסימלי כדי לאפשר גלילה אם יש צורך */
-            overflow-y: auto; /* משאירים גלילה למקרה שיש הרבה מדינות */
-        }
+    .error {
+      color: red;
+      margin-top: 10px;
+    }
 
-        #country-list li {
-            background-color: #000;
-            border: 1px solid #aaa;
-            padding: 8px 12px;
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 0.95em;
-            user-select: none;
-            color: #fff;
-        }
+    #question {
+      font-size: 1.6em;
+      font-weight: bold;
+      margin: 16px 0;
+      text-align: center;
+      background-color: rgba(255, 255, 255, 0.1);
+      padding: 8px 16px;
+      border-radius: 8px;
+    }
 
-        #country-list li.selected {
-            background-color: #0077cc;
-            color: #fff;
-        }
+    #scoreboard {
+      margin-top: 10px;
+      font-size: 1em;
+    }
 
-        .matched {
-         background-color: lightgreen !important;
-          border-color: green !important;
-         color: gray !important;
-         cursor: not-allowed !important;
-          opacity: 0.6 !important; /* הוספת !important כדי להגביר את הספציפיות */
-        }
-        }
+    #victory-message {
+      display: none;
+      font-size: 1.2em;
+      color: lightgreen;
+      margin-top: 10px;
+    }
 
-        .error {
-            color: red;
-            margin-top: 10px;
-        }
+    @media (max-width: 600px) {
+      body {
+        padding: 10px;
+      }
 
-        #scoreboard {
-            margin-top: 10px;
-            font-size: 1em;
-        }
+      #map-container {
+        height: 80vh;
+        width: 100%;
+      }
 
-        #victory-message {
-            display: none;
-            font-size: 1.2em;
-            color: lightgreen;
-            margin-top: 10px;
-        }
+      svg {
+        height: 100%;
+        width: 100%;
+        max-height: unset;
+      }
 
-        @media (max-width: 600px) {
-            #country-list {
-                font-size: 1em; /* גודל גופן קצת יותר גדול במובייל */
-                /* max-height: 80vh; אפשר להגדיר גובה מקסימלי יחסי למסך */
-                flex-direction: column; /* סידור המדינות בעמודה אחת במקום בשורות */
-                align-items: center; /* מרכוז המדינות */
-            }
+      #question {
+        font-size: 1.3em;
+        text-align: center;
+      }
 
-            #country-list li {
-                margin-bottom: 5px; /* מרווח בין פריטים ברשימה במובייל */
-                width: 80%; /* רוחב יותר קטן לפריטים ברשימה */
-                text-align: center; /* מרכוז הטקסט בתוך הפריט */
-            }
+      #controls {
+        flex-direction: column;
+        align-items: center;
+        gap: 6px;
+      }
 
-            #map-container {
-                margin-top: 20px; /* מרווח עליון למפה במובייל */
-            }
-        }
-    </style>
+      button {
+        font-size: 1em;
+        padding: 10px 16px;
+        width: 80%;
+        max-width: 300px;
+      }
+
+      #scoreboard,
+      #feedback {
+        font-size: 1em;
+        text-align: center;
+      }
+    }
+  </style>
 </head>
 <body>
+  <div id="controls">
     <button id="restart-button">Restart Game</button>
+    <button id="skip-button">Skip</button>
+  </div>
 
-    <div id="map-container">
-        <svg viewBox="0 0 1000 660" preserveAspectRatio="xMidYMid meet"></svg>
-    </div>
+  <div id="question"></div>
 
-    <ul id="country-list"></ul>
-    <div id="feedback"></div>
-    <div id="scoreboard">
-        <strong>Score:</strong> <span id="score">0</span> |
-        <strong>Attempts:</strong> <span id="attempts">0</span>
-    </div>
-    <div id="victory-message"></div>
+  <div id="map-container">
+    <svg viewBox="0 0 1000 660" preserveAspectRatio="xMidYMid meet"></svg>
+  </div>
 
-    <script>
-        const nameMap = {
-            "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
-            "CY": "Cyprus", "CZ": "Czech Republic", "DK": "Denmark", "EE": "Estonia", "FI": "Finland",
-            "FR": "France", "DE": "Germany", "GR": "Greece", "HU": "Hungary", "IS": "Iceland",
-            "IE": "Ireland", "IT": "Italy", "LV": "Latvia", "LT": "Lithuania", "LU": "Luxembourg",
-            "MT": "Malta", "NL": "Netherlands", "NO": "Norway", "PL": "Poland", "PT": "Portugal",
-            "RO": "Romania", "SK": "Slovakia", "SI": "Slovenia", "ES": "Spain", "SE": "Sweden",
-            "CH": "Switzerland", "GB": "United Kingdom", "UA": "Ukraine", "RS": "Serbia", "BA": "Bosnia and Herzegovina",
-            "MD": "Moldova", "MK": "North Macedonia", "BY": "Belarus", "RU": "Russia", "TR": "Turkey",
-            "AZ": "Azerbaijan", "AM": "Armenia", "IL": "Israel", "LI": "Liechtenstein", "FO": "Faroe Islands",
-            "AD": "Andorra", "MC": "Monaco", "ME": "Montenegro", "SM": "San Marino", "VA": "Vatican City"
-        };
+  <div id="feedback"></div>
 
-        const svg = d3.select("svg");
-        const width = 960;
-        const height = 600;
+  <div id="scoreboard">
+    <strong>Score:</strong> <span id="score">0</span> |
+    <strong>Attempts:</strong> <span id="attempts">0</span>
+  </div>
 
-        const projection = d3.geoMercator()
-            .center([20, 55])
-            .scale(600)
-            .translate([width / 2, height / 2]);
+  <div id="victory-message"></div>
 
-        const path = d3.geoPath().projection(projection);
+  <script>
+    const nameMap = {
+      "AL": "Albania", "AT": "Austria", "BE": "Belgium", "BG": "Bulgaria", "HR": "Croatia",
+      "CY": "Cyprus", "CZ": "Czech Republic", "DK": "Denmark", "EE": "Estonia", "FI": "Finland",
+      "FR": "France", "DE": "Germany", "GR": "Greece", "HU": "Hungary", "IS": "Iceland",
+      "IE": "Ireland", "IT": "Italy", "LV": "Latvia", "LT": "Lithuania", "LU": "Luxembourg",
+      "MT": "Malta", "NL": "Netherlands", "NO": "Norway", "PL": "Poland", "PT": "Portugal",
+      "RO": "Romania", "SK": "Slovakia", "SI": "Slovenia", "ES": "Spain", "SE": "Sweden",
+      "CH": "Switzerland", "GB": "United Kingdom", "UA": "Ukraine", "RS": "Serbia", "BA": "Bosnia and Herzegovina",
+      "MD": "Moldova", "MK": "North Macedonia", "BY": "Belarus", "RU": "Russia", "TR": "Turkey",
+      "AZ": "Azerbaijan", "AM": "Armenia", "IL": "Israel", "LI": "Liechtenstein", "FO": "Faroe Islands",
+      "AD": "Andorra", "MC": "Monaco", "ME": "Montenegro", "SM": "San Marino", "VA": "Vatican City",
+      "GE": "Georgia"
+    };
 
-        let selectedCountry = null;
-        let score = 0;
-        let attempts = 0;
-        let correctGuesses = 0;
+    const svg = d3.select("svg");
+    const width = 1000;
+    const height = 660;
 
-        d3.json('data/europe.topojson').then(data => {
-            const countries = topojson.feature(data, data.objects.europe).features;
+    const projection = d3.geoMercator()
+      .center([20, 55])
+      .scale(600)
+      .translate([width / 2, height / 2]);
 
-            const countryPaths = svg.selectAll('path')
-                .data(countries)
-                .enter().append('path')
-                .attr('d', path)
-                .attr('id', d => 'country-' + d.id);
+    const path = d3.geoPath().projection(projection);
 
-            const countryList = d3.select('#country-list');
-            const countryNames = countries.map(d => ({
-                id: d.id,
-                name: nameMap[d.id] || d.id,
-                centroid: path.centroid(d)
-            }));
+    let remainingCountries = [];
+    let currentTarget = null;
+    let score = 0;
+    let attempts = 0;
 
-            const countryItems = countryList.selectAll('li')
-                .data(countryNames)
-                .enter().append('li')
-                .attr('id', d => 'country-' + d.id)
-                .text(d => d.name)
-                .on('click', function(d) {
-                    if (!d3.select(this).classed('matched')) {
-                        countryList.selectAll('li').classed('selected', false);
-                        d3.select(this).classed('selected', true);
-                        selectedCountry = d;
-                        d3.select('#feedback').text('');
-                    }
-                });
+    function pickNextCountry() {
+      if (remainingCountries.length === 0) {
+        d3.select("#victory-message")
+          .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
+          .style("display", "block");
+        d3.select("#question").text('');
+        return;
+      }
+      currentTarget = remainingCountries.pop();
+      d3.select("#question").text(`Where is: ${currentTarget.name}?`);
+    }
 
-            countryPaths.on('click', function(d) {
-                const feedbackElement = d3.select('#feedback');
-                if (selectedCountry) {
-                    attempts++;
-                    d3.select('#attempts').text(attempts);
-                    if (nameMap[d.id] === selectedCountry.name) {
-                        score += 10;
-                        correctGuesses++;
-                        d3.select('#score').text(score);
-                        feedbackElement.text('Correct!').classed('error', false);
-                        d3.select(this).classed('guessed', true);
-                        const matchedItem = d3.select('#country-' + selectedCountry.id);
-                        matchedItem.classed('matched', true).classed('selected', false).on('click', null);
-                        selectedCountry = null;
+    d3.json('data/europe.topojson').then(data => {
+      const countries = topojson.feature(data, data.objects.europe).features;
+      const validCountries = countries
+        .map(d => ({ id: d.id, name: nameMap[d.id] }))
+        .filter(d => d.name);
 
-                        if (correctGuesses === countryNames.length) {
-                            d3.select('#victory-message')
-                                .text(`🎉 You won! Final score: ${score} in ${attempts} attempts.`)
-                                .style('display', 'block');
-                        }
-                    } else {
-                        feedbackElement.text('Incorrect! Try again.').classed('error', true);
-                    }
-                } else {
-                    feedbackElement.text('Please select a country name first.').classed('error', true);
-                }
-            });
+      remainingCountries = d3.shuffle(validCountries.slice());
+      pickNextCountry();
 
-            d3.select('#restart-button').on('click', () => location.reload());
-        });
-    </script>
+      const countryPaths = svg.selectAll('path')
+        .data(countries)
+        .enter().append('path')
+        .attr('d', path)
+        .attr('id', d => 'country-' + d.id);
+
+      countryPaths.on('click', function(d) {
+        const feedback = d3.select('#feedback');
+        if (!currentTarget) return;
+
+        attempts++;
+        d3.select('#attempts').text(attempts);
+
+        if (d.id === currentTarget.id) {
+          score += 10;
+          d3.select('#score').text(score);
+          feedback.text('Correct!').classed('error', false);
+          d3.select(this).classed('guessed', true);
+          currentTarget = null;
+          setTimeout(pickNextCountry, 700);
+        } else {
+          feedback.text('Incorrect! Try again.').classed('error', true);
+        }
+      });
+
+      d3.select('#skip-button').on('click', () => {
+        if (!currentTarget) return;
+        d3.select('#feedback').text(`Skipped: ${currentTarget.name}`).classed('error', false);
+        const insertIndex = Math.floor(Math.random() * remainingCountries.length);
+        remainingCountries.splice(insertIndex, 0, currentTarget);
+        currentTarget = null;
+        setTimeout(pickNextCountry, 700);
+      });
+
+      d3.select('#restart-button').on('click', () => location.reload());
+    });
+  </script>
 </body>
 </html>
