--- a/index-europe1.html
+++ b/index-europe1.html
@@ -111,6 +111,7 @@
       #map-container {
         height: 80vh;
         width: 100%;
+        margin-top: 10px;
       }
 
       svg {
@@ -184,10 +185,11 @@
     const svg = d3.select("svg");
     const width = 1000;
     const height = 660;
+    const isMobile = window.innerWidth < 600;
 
     const projection = d3.geoMercator()
       .center([20, 55])
-      .scale(600)
+      .scale(isMobile ? 1000 : 600)
       .translate([width / 2, height / 2]);
 
     const path = d3.geoPath().projection(projection);
